--- a/about.html
+++ b/about.html
@@ -204,7 +204,7 @@
                     </div>
                     <div class="col-6">
                         <div class="box-stats">
-                            <h3 class="poppins-font position-relative">25</h3>
+                            <h3 class="poppins-font position-relative">22</h3>
                             <p class="open-sans-font m-0 position-relative text-uppercase">Online<span class="d-block">certificates</span></p>
                         </div>
                     </div>
@@ -370,12 +370,8 @@
                                 <i class="fa fa-graduation-cap"></i>
                             </div>
                             <span class="time open-sans-font text-uppercase">2022-2023</span>
-                            <h5 class="poppins-font text-uppercase">Summer School<span class="place open-sans-font">Harvard Summer School & UCLA Summer</span></h5>
-                            <p class="open-sans-font"><br>Participating in Harvard Summer School's computer science program can open doors to a wide range of opportunities.</br>
-                                <br>Course Applied:</br>
-                                •Data Science
-                                <br>•CS50 (Onsite)</br>
-
+                            <h5 class="poppins-font text-uppercase">Summer School<span class="place open-sans-font">UCLA Summer School</span></h5>
+                            <p class="open-sans-font">
                                 <br>The Computer Science Introductory Track provides a unique combination of coding boot camp, and lab touring experiences, 
                                 as well as UCLA coursework designed for students interested in computer science and related majors.</br>
                                 <br>Course Applied:</br>
