--- a/about.html
+++ b/about.html
@@ -322,7 +322,7 @@
                             <div class="icon">
                                 <i class="fa fa-briefcase"></i>
                             </div>
-                            <span class="time open-sans-font text-uppercase">2021 - 2023</span>
+                            <span class="time open-sans-font text-uppercase">2023</span>
                             <h5 class="poppins-font text-uppercase">Backend Developer<span class="place open-sans-font">Optum</span></h5>
                             <p class="open-sans-font"><br>•Database Management</br>
                                 •API Development
