--- a/about.html
+++ b/about.html
@@ -323,7 +323,7 @@
                                 <i class="fa fa-briefcase"></i>
                             </div>
                             <span class="time open-sans-font text-uppercase">2023</span>
-                            <h5 class="poppins-font text-uppercase">Backend Developer<span class="place open-sans-font">Optum</span></h5>
+                            <h5 class="poppins-font text-uppercase">Backend Developer<span class="place open-sans-font"></span></h5>
                             <p class="open-sans-font"><br>•Database Management</br>
                                 •API Development
                                 <br>•Security</br>
